fixed spacing

--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@
     height: 90vh;
     background-repeat: no-repeat;
     opacity: 0.3;
-    margin: 100px auto;
     align-items: center;
+    margin: 100px 0 0 120px;
 }
-
 
 header {
     position: relative;
-    height: 65px;
+    height: 30px;
     
 }
 
@@ -30,11 +29,10 @@ ul {
 	padding: 0;
     margin-left: auto;
     display: flex;
-
 }
 
 li {
-	padding: 10px;
+	padding: 30px;
 }
 
 a {
@@ -42,39 +40,12 @@ a {
 	text-decoration: none;
 }
 
-@media screen and (max-width: 768px) {
-	.container img {
-        height: 300px;
-        width: 300px;
-        margin: 300px 0 300px 150px;
-    }
-    nav {
-		flex-direction: column;
-		align-items: flex-start;
-		position: fixed;
-		top: 0;
-		left: 0;
-		height: 100vh;
-		width: 130px;
-		padding: 20px;
-	}
-	
-	ul {
-		flex-direction: column;
-		align-items: center;
-		margin-top: 20px;
-	}
-	
-	li {
-		padding: 10px 0;
-	}
-}
 
 main {
     position: relative;
     text-align: center;
-  }
-  
+}
+
 .section {
     color: #198086;
     height: 500px; /* adjust to the height you want for each section */
@@ -87,7 +58,7 @@ main {
 }
 
 #about {
-    margin-top: 700px;
+    margin-top: 180px;
 }
 .section h2 {
     font-size: 64px;
@@ -98,57 +69,44 @@ main {
 #about p {
     margin: 0 150px;
 }
-
-#home {
-    margin: 50px 0 0 0;
+#contact {
+    margin-bottom: 250px;
+}
+#contact i {
+    margin-right: 10px;
 }
 
-.down-arrow {
-    position: absolute;
-    top: calc(100vh - 60px);
-    left: calc(50% - 14px);
-    width: 0;
-    height: 30px;
-    border: 2px solid;
-    border-radius: 2px;
-    cursor: pointer;
-    color: #198086;
-    /* rest of the styles from above */
-    animation: jumpInfinite 1.5s infinite;
-  }
-  
-.down-arrow:after {
-    content: " ";
-    position: relative;
-    top: 12px;
-    left: -10px;
-    width: 16px;
-    height: 16px;
-    border-bottom: 4px solid;
-    border-right: 4px solid;
-    border-radius: 4px;
-    transform: rotateZ(45deg);
-}
-@keyframes jumpInfinite {
-0% {
-    margin-top: 0;
-}
-50% {
-    margin-top: 20px;
-}
-100% {
-    margin-top: 0;
-}
-}
 
-/* Add this CSS */
-.down-arrow a {
-    display: block;
-    width: 100%;
-    height: 100%;
-}
-  
-  /* Optional: add smooth scrolling behavior */
+/* Optional: add smooth scrolling behavior */
 html {
-scroll-behavior: smooth;
+    scroll-behavior: smooth;
+}
+
+@media screen and (max-width: 768px) {
+    .container img {
+        height: 50vh;
+        width: 50vh;
+        margin: 100px 0 300px 150px;
+    }
+    nav {
+        flex-direction: column;
+        align-items: flex-start;
+        position: fixed;
+        font-size: 24px;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100px;
+        padding: 10px;
+    }
+    
+    ul {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+    }
+    
+    li {
+        padding: 10px 0;
+    }
 }
